--- a/EventRegistration-Backend/build.gradle
+++ b/EventRegistration-Backend/build.gradle
@@ -21,4 +21,9 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	
+	testLogging {
+		exceptionFormat "full"
+		events "failed", "skipped", "passed"
+	}
 }
