--- a/EventRegistration-Backend/src/main/resources/application.properties
+++ b/EventRegistration-Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name = org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/event_registration
 spring.datasource.username = postgres
