--- a/EventRegistration-Backend/src/main/resources/application.properties
+++ b/EventRegistration-Backend/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.username = postgres
 spring.datasource.password = oliphaunt
-spring.datasource.url = jdbc:postgresql://localhost:5432/event_registration
+spring.datasource.url = postgres://localhost:5432/event_registration
 
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = update
