--- a/EventRegistration-Backend/src/main/resources/application.properties
+++ b/EventRegistration-Backend/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/event_registration
 
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = update
+
+server.port = 8081
