--- a/EventRegistration-Backend/build.gradle
+++ b/EventRegistration-Backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.2'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'jacoco'
 }
 
 group = 'ca.mcgill.ecse321'
@@ -25,6 +26,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-common:2.0.3'
 	annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.13.0'
 	implementation 'com.github.therapi:therapi-runtime-javadoc:0.13.0'
+	
+	// Code coverage
 }
 
 tasks.named('test') {
@@ -33,5 +36,27 @@ tasks.named('test') {
 	testLogging {
 		exceptionFormat "full"
 		events "failed", "skipped", "passed"
+	}
+	
+	// After running the tests, generate the coverage report and require sufficient coverage
+	finalizedBy jacocoTestReport
+	finalizedBy jacocoTestCoverageVerification
+}
+
+jacocoTestReport {
+	// Run the tests before generating the coverage report
+	dependsOn test
+}
+
+jacocoTestCoverageVerification {
+	// Run the tests before checking coverage
+	dependsOn test
+
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.6
+			}
+		}
 	}
 }
